--- a/analyser/templates/analyser/index.html
+++ b/analyser/templates/analyser/index.html
@@ -1,14 +1,21 @@
+
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
     <title>Whatsapp Analysis</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
+    <link rel="stylesheet" type="text/css" href="{% static 'analyser/css/main.css' %}" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 <body> 
+    <div id="progress-wrp">
+    		<div class="progress-bar"></div>
+    		<div class="status">0%</div>
+    </div>
         <nav>
-                <div class="nav-wrapper green accent-3">
+                <div class="nav-wrapper">
                   <a href="#!" class="brand-logo">Whatsapp Analyser</a>
                   <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                   <ul class="right hide-on-med-and-down">
@@ -22,13 +29,68 @@
                 <li><a href="sass.html">About</a></li>
                 <li><a href="badges.html">MathOCR</a></li>
               </ul>
-    <div class="container">  
+    <div class="parallax-container">
+      <div class="parallax"><img src={% static 'analyser/images/background.jpg' %}></div>
+    </div>
+    <div class="container"> 
+      <div class="row">
+        <div class="col s12">
+          <div class="file-div">
+            <input type="file" id="file-input" hidden>
+            <label for="file-input" id="file-upload-label" class="waves-effect waves-light btn">Attach a file</label>
+            <button id="upload-btn" class="waves-effect waves-light btn" disabled >Upload</button>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col s12 result-div">
+            <h4>Message counts</h4>
+            <div id="sendercount"></div>
+          </div>
+        </div>
+        <div class="row">
+            <div class="col s12 result-div">
+                <h4>Overall</h4>
+                <div id="overall"></div>                
+            </div>
+        </div>
+        <div class="row">
+            <div class="col s4 result-div">
+                <h4>Daywise</h4>
+                <div id="daywise"></div>
+            </div>
+            <div class="col s4 result-div">
+                <h4>Datewise</h4>
+                <div id="datewise"></div>                
+            </div>
+            <div class="col s4 result-div">
+              <h4>Monthwise</h4>
+              <div id="monthwise"></div>
+            </div>
+        </div>
+
+      </div>   
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>  
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
+    <script src="{% static 'analyser/scripts/main.js' %}" type="text/javascript"></script>
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script>
+        $(document).ready(function(){
+          $('.parallax').parallax();
+        });      
     $(document).ready(function(){
         $('.sidenav').sidenav();
     });
+    $('#file-input').on("change",function(){
+      $("#file-upload-label").hide();
+      $("#upload-btn").fadeIn();
+      $("#upload-btn").prop("disabled",false);
+    });
+    $('#upload-btn').on('click',function(){
+      var file = $('#file-input')[0].files[0];
+      var addr = "{% url 'analyser:analyse' %}";
+      var upload = new Upload(file,addr);
+      upload.doUpload();
+    })
     </script>
     </div>
 </body>
