--- a/analyser/templates/analyser/index.html
+++ b/analyser/templates/analyser/index.html
@@ -16,7 +16,7 @@
     </div>
         <nav>
                 <div class="nav-wrapper">
-                  <a href="#!" class="brand-logo">Whatsapp Analyser</a>
+                  <a href="#!" class="brand-logo">WAnalyser</a>
                   <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                   <ul class="right hide-on-med-and-down">
                     <li><a href="sass.html">About</a></li>
@@ -54,15 +54,15 @@
             </div>
         </div>
         <div class="row">
-            <div class="col s4 result-div">
+            <div class="col s12 l4 m4 result-div">
                 <h4>Daywise</h4>
                 <div id="daywise"></div>
             </div>
-            <div class="col s4 result-div">
+            <div class="col s12 l4 m4 result-div">
                 <h4>Datewise</h4>
                 <div id="datewise"></div>                
             </div>
-            <div class="col s4 result-div">
+            <div class="col s12 l4 m4 result-div">
               <h4>Monthwise</h4>
               <div id="monthwise"></div>
             </div>
