--- a/analyser/templates/analyser/index.html
+++ b/analyser/templates/analyser/index.html
@@ -15,7 +15,7 @@
     		<div class="status">0%</div>
     </div>
         <nav>
-                <div class="nav-wrapper">
+                <div class="nav-wrapper green accent-3">
                   <a href="#!" class="brand-logo">WAnalyser</a>
                   <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                   <ul class="right hide-on-med-and-down">
@@ -33,42 +33,44 @@
       <div class="parallax"><img src={% static 'analyser/images/background.jpg' %}></div>
     </div>
     <div class="container"> 
-      <div class="row">
+      <div class="row"  style="margin-bottom:0px">
         <div class="col s12">
           <div class="file-div">
             <input type="file" id="file-input" hidden>
-            <label for="file-input" id="file-upload-label" class="waves-effect waves-light btn">Attach a file</label>
-            <button id="upload-btn" class="waves-effect waves-light btn" disabled >Upload</button>
+            <label for="file-input" id="file-upload-label" class="waves-effect waves-light btn green accent-3">Attach a file</label>
+            <button id="upload-btn" class="waves-effect waves-light btn green accent-3" disabled >Upload</button>
           </div>
         </div>
-        <div class="row">
-          <div class="col s12 result-div">
+      </div>
+        <div class="row result-div">
+          <div class="col s12">
             <h4>Message counts</h4>
             <div id="sendercount"></div>
           </div>
         </div>
-        <div class="row">
-            <div class="col s12 result-div">
+        <div class="row result-div">
+            <div class="col s12">
                 <h4>Overall</h4>
                 <div id="overall"></div>                
             </div>
         </div>
-        <div class="row">
-            <div class="col s12 l4 m4 result-div">
+        <div class="row result-div">
+            <div class="col s12 l4 m4">
                 <h4>Daywise</h4>
                 <div id="daywise"></div>
             </div>
-            <div class="col s12 l4 m4 result-div">
+            <div class="col s12 l4 m4">
                 <h4>Datewise</h4>
                 <div id="datewise"></div>                
             </div>
-            <div class="col s12 l4 m4 result-div">
+            <div class="col s12 l4 m4">
               <h4>Monthwise</h4>
               <div id="monthwise"></div>
             </div>
         </div>
 
-      </div>   
+      </div>  
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>  
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
     <script src="{% static 'analyser/scripts/main.js' %}" type="text/javascript"></script>
@@ -92,6 +94,28 @@
       upload.doUpload();
     })
     </script>
-    </div>
+    <footer class="page-footer grey darken-3">
+      <div class="container">
+        <div class="row">
+          <div class="col l6 s12">
+            <h5 class="white-text">About me</h5>
+            <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+          </div>
+          <div class="col l4 offset-l2 s12">
+            <h5 class="white-text">Other Projects</h5>
+            <ul>
+              <li><a class="grey-text text-lighten-3" href="#!">MathOCR</a></li>
+              <li><a class="grey-text text-lighten-3" href="#!">Blogdb</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="footer-copyright grey darken-4">
+        <div class="container">
+        Akshat Dubey
+        <a class="grey-text text-lighten-4 right" href="#!">Github</a>
+        </div>
+      </div>
+    </footer>
 </body>
 </html>
