--- a/analyser/static/analyser/css/main.css
+++ b/analyser/static/analyser/css/main.css
@@ -3,9 +3,9 @@ nav .brand-logo{
 }
 #progress-wrp {
     height: 3px;
-    width:100vh;
     border-radius: 0;
     margin: auto;
+    margin-top:10px;
     color:white;
     letter-spacing: 3px;
     font-size:20px;
@@ -16,33 +16,33 @@ nav .brand-logo{
 #progress-wrp .progress-bar{
     height: 100%;
     border-radius: 0;
-    background-color: var(--color-c);
+    background-color: #4ed76b;
     width: 0;
     box-shadow: inset 1px 1px 10px rgba(0, 0, 0, 0.11);
+}
+#progress-wrp{
+    display: none;
 }
 .parallax-container{
     height:540px;
     width:100%;
 }
-#progress-wrp{
+.file-div{
     display:none;
 }
-.nav-wrapper{
-    background-color:#4ed76b;
-}
 @media only screen and (min-width: 1024px){
-    .file-div{
-        position:absolute;
-        top:0px;
-        text-align: center;
-        margin: 25% 25%;   
+    #logo-sign{
+        height:30px;
+        width:30px;
+        margin-right:10px;
+        position:relative;
+        top:4px;
     }
 }
 @media only screen and (max-width: 1024px)
 {
-    .file-div{
-        position:absolute;
-        top: 50%;
+    #logo-sign{
+        display:none;
     }
 }
 
@@ -67,4 +67,14 @@ h4{
 }
 .result-div{
     display:none;
+}
+.preloader-div{
+    display:none;
+    z-index:4;
+    position:fixed;
+    padding:50vh 0;
+    width:100%;
+    height:100%;
+    text-align:center;
+    background:rgba(255, 255, 255, 0.927);
 }
