--- a/analyser/templates/analyser/index.html
+++ b/analyser/templates/analyser/index.html
@@ -7,16 +7,57 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
     <link rel="stylesheet" type="text/css" href="{% static 'analyser/css/main.css' %}" />
+    <link rel="icon" href="{% static 'analyser/images/logo.png' %}">
+    <meta name="theme-color" content="#4ed76b" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 <body> 
-    <div id="progress-wrp">
-    		<div class="progress-bar"></div>
-    		<div class="status">0%</div>
+  <div class="preloader-div">
+      <div class="preloader-wrapper big active">
+          <div class="spinner-layer spinner-blue">
+            <div class="circle-clipper left">
+              <div class="circle"></div>
+            </div><div class="gap-patch">
+              <div class="circle"></div>
+            </div><div class="circle-clipper right">
+              <div class="circle"></div>
+            </div>
+          </div>
+    
+          <div class="spinner-layer spinner-red">
+            <div class="circle-clipper left">
+              <div class="circle"></div>
+            </div><div class="gap-patch">
+              <div class="circle"></div>
+            </div><div class="circle-clipper right">
+              <div class="circle"></div>
+            </div>
+          </div>
+    
+          <div class="spinner-layer spinner-yellow">
+            <div class="circle-clipper left">
+              <div class="circle"></div>
+            </div><div class="gap-patch">
+              <div class="circle"></div>
+            </div><div class="circle-clipper right">
+              <div class="circle"></div>
+            </div>
+          </div>
+    
+          <div class="spinner-layer spinner-green">
+            <div class="circle-clipper left">
+              <div class="circle"></div>
+            </div><div class="gap-patch">
+              <div class="circle"></div>
+            </div><div class="circle-clipper right">
+              <div class="circle"></div>
+            </div>
+          </div>
+        </div>
     </div>
         <nav>
                 <div class="nav-wrapper green accent-3">
-                  <a href="#!" class="brand-logo">WAnalyser</a>
+                  <a href="#!" class="brand-logo"><image src="{%static "analyser/images/logo.png" %}" id="logo-sign"></image>WAnalyser</a>
                   <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                   <ul class="right hide-on-med-and-down">
                     <li><a href="sass.html">About</a></li>
@@ -29,20 +70,24 @@
                 <li><a href="sass.html">About</a></li>
                 <li><a href="badges.html">MathOCR</a></li>
               </ul>
-    <div class="parallax-container">
+    <div class="parallax-container valign-wrapper">
       <div class="parallax"><img src={% static 'analyser/images/background.jpg' %}></div>
+      <div class="file-div">
+          <input type="file" id="file-input" hidden>
+          <label for="file-input" id="file-upload-label" class="waves-effect waves-light btn green accent-3">Attach a file</label>
+          <button id="upload-btn" class="waves-effect waves-light btn green accent-3" disabled >Upload</button>
+          <div id="progress-wrp">
+            <div class="progress-bar"></div>
+            <div class="status">0%</div>
+          </div>
+        </div>
     </div>
     <div class="container"> 
       <div class="row"  style="margin-bottom:0px">
         <div class="col s12">
-          <div class="file-div">
-            <input type="file" id="file-input" hidden>
-            <label for="file-input" id="file-upload-label" class="waves-effect waves-light btn green accent-3">Attach a file</label>
-            <button id="upload-btn" class="waves-effect waves-light btn green accent-3" disabled >Upload</button>
-          </div>
         </div>
       </div>
-        <div class="row result-div">
+        <div class="row result-div" id="result-start">
           <div class="col s12">
             <h4>Message counts</h4>
             <div id="sendercount"></div>
@@ -78,6 +123,9 @@
     <script>
         $(document).ready(function(){
           $('.parallax').parallax();
+          $('.file-div').fadeIn();
+          $('.file-div').css({'margin-left': ($(window).width()/2-$('#file-upload-label').width())});
+          $('#upload-btn').css({'margin-left': ($(window).width()/2-$('#upload-btn').width()*2)});
         });      
     $(document).ready(function(){
         $('.sidenav').sidenav();
@@ -91,6 +139,8 @@
       var file = $('#file-input')[0].files[0];
       var addr = "{% url 'analyser:analyse' %}";
       var upload = new Upload(file,addr);
+      $("#upload-btn").prop("disabled",true);
+      $('#progress-wrp').fadeIn();
       upload.doUpload();
     })
     </script>
@@ -98,8 +148,12 @@
       <div class="container">
         <div class="row">
           <div class="col l6 s12">
-            <h5 class="white-text">About me</h5>
-            <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+            <h5 class="white-text">How to use?</h5>
+            <ul class="grey-text text-lighten-4">
+              <li>1. Open the chat you want to analyse</li>
+              <li>2. Options > More > Export Chat</li>
+              <li>3. Upload the exported file here</li>
+            </ul>
           </div>
           <div class="col l4 offset-l2 s12">
             <h5 class="white-text">Other Projects</h5>
